--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -405,3 +405,21 @@
  shaantin_huangche_influences_desc: "Aggresiveness of our Heisen rivals and the growing influence of the souther pirates made many of our people wishing to establish proper order in the countryside, strengthening the administration and founding a proper army. These tendencies made the court much more likely to maintain better relations with the Huangche countries."
  shaantin_new_shenting_school: "New Shenting School"
  shaantin_new_shenting_school_desc: "The traditional Shenting school believes that the ruler's power is inherently divine and only person chosen by the heavens will be a good ruler. The issue with that approach is that absolves the ruler of responsibility and accountability, encouraging them to focus solely on the sacral matters. The new approach, inspired by the Taamtau school, promotes an orderly system and heavily organized system, coming from the belief that in order to achieve the divine, we must maintain order at all cost."
+
+ tsutan_group_ideas: "Tsutan Minor Ideas"
+ tsutan_group_ideas_bonus: "Tsutan Minor Ambition"
+ tsutan_group_ideas_start: "Tsutan Minor Traditions"
+ tsutan_luetan_colonization: "Colonization of the Luetan"
+ tsutan_luetan_colonization_desc: "Our ancestors saw a great potential in the Luetan rainforest, turning the wild jungle into a prosperous countryside. With the process greatly helped advanced for their times fortifications, which protected the population during enemy raids."
+ tsutan_merchant_fleets: "Merchant Fleets"
+ tsutan_merchant_fleets_desc: "Compared to the states in the mainland, the merchants of Tsutan often maintain their own private trade fleets, however only the most wealthy can afford to maintain a navy large enough to survive in the competetive markets of Tsinhoi."
+ tsutan_meritocratic_roots: "Roots of Meritocracy"
+ tsutan_meritocratic_roots_desc: "Since the times of Hu Jiming, the opinions and insights of the Tsutan people about his teachings greatly varied, sometimes being founding blocks of the society, but also often completely rejected. In the current age, his wisdom is once again placed on a pedestal, enlightening even the most staunch elitists."
+ tsutan_professional_militias: "Professional Militias"
+ tsutan_professional_militias_desc: "The need to maintain a constant supply of men during war times and frequent skirmishes in the jungle have led to the formation of a small caste of warriors, which developed their own traditions. Even during peacetimes they are rented to other states, so that they never lose their edge."
+ tsutan_personalized_cults: "Personalized Cults"
+ tsutan_personalized_cults_desc: "It is said that every person has their own associated deity or spirit which helps them fullfill their destiny throughout their whole life. This predestination often shows itself in the relative passiveness of the population, seeing misfortunes as only helping the person to grow."
+ tsutan_silk: "Tsutan Silk"
+ tsutan_silk_desc: "While the silk produced in Tsutan is not the most luxurious, it is relatively cheap compared to the alternatives. Produced in or around urban spaces, the cheap clothes are worn by the poorer burghers and nobles. While not as comfortable, they still look somewhat luxurious to an unexperienced observer."
+ tsutan_cakrawalunian_trade: "Cakrawalunian Trade"
+ tsutan_cakrawalunian_trade_desc: "Thanks to our connection to Cakrawalunia, many of our merchants purchase local incenses and spices and sell them to the rich countries up north, which will later travel further west. Growing demands for these luxurious goods led to many of our people to expand their operation in the east, funding and supporting local production for their own benefit."
