--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -371,9 +371,9 @@
  sunpah_area: "Sunpah"
  sefert_area: "Sefert"
  ribyah_coast_area: "Ribyah Coast"
- lower_oyria_area: "Lower Oyria"
- middle_oyria_area: "Middle Oyria"
- upper_oyria_area: "Upper Oyria"
+ lower_oyria_area: "Lower Oyar"
+ middle_oyria_area: "Middle Oyar"
+ upper_oyria_area: "Upper Oyar"
  rakabani_highlands_area: "Rakabani Highlands"
 
  barhan_area: "Barhan"
@@ -992,3 +992,23 @@
 
  diarenan_gulf_area: "Gulf of Diarena"
  dakhal_sea_area: "Dakhal Sea"
+
+ kwalen_area: "Kwalen"
+ yaern_area: "Yaern"
+ south_hedasia_area: "South Hedasia"
+ north_hedasia_area: "North Hedasia"
+ dengaza_area: "Dengaza"
+ nechaka_area: "Nechaka"
+ yada_area: "Yada"
+ bikne_area: "Bikne"
+ lower_angwar_area: "Lower Angwar"
+ tufatera_area: "Tufatera"
+ kahar_valley_area: "Kahar Valley"
+ kogata_area: "Kogata"
+ sada_area: "Sada"
+ negwade_area: "Negwade"
+ maraltada_area: "Maraltada"
+ gednar_area: "Gednar"
+ lahagar_area: "Lahagar"
+ socho_area: "Socho"
+ akkalon_area: "Akkalon"
