--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4538,7 +4538,7 @@
  PROV4537: "Huipet"
  PROV4538: "Ruksjoa"
  PROV4539: "Hazordan"
- PROV4540: "Yaern"
+ PROV4540: "Qaran"
  PROV4541: "Qontara" #spear
  PROV4542: "Hawab" #Coast forest
  PROV4543: "Kuhedas"
