Atekek prov names
Kekw

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4683,7 +4683,7 @@
  PROV4682: "4682"
  PROV4683: "4683"
  PROV4684: "4684"
- PROV4685: "4685"
+ PROV4685: "Gaxnaxiyim"
  PROV4686: "4686"
  PROV4687: "4687"
  PROV4688: "4688"
@@ -4695,23 +4695,23 @@
  PROV4694: "4694"
  PROV4695: "4695"
  PROV4696: "4696"
- PROV4697: "4697"
- PROV4698: "4698"
- PROV4699: "4699"
+ PROV4697: "Xiyimatek"
+ PROV4698: "Amaxaanimcki"
+ PROV4699: "Atekxkami"
  PROV4700: "4700"
  PROV4701: "4701"
  PROV4702: "Yetaarkahar"
- PROV4703: "4703"
- PROV4704: "4704"
- PROV4705: "4705"
- PROV4706: "4706"
- PROV4707: "4707"
- PROV4708: "4708"
- PROV4709: "4709"
- PROV4710: "4710"
+ PROV4703: "Awxiatek"
+ PROV4704: "Ixnacamil"
+ PROV4705: "Sikiliyevi"
+ PROV4706: "Yagipxili"
+ PROV4707: "Kapkyaxkami"
+ PROV4708: "Kinnawarya"
+ PROV4709: "Akxikxiatek"
+ PROV4710: "Cixiykilila"
  PROV4711: "4711"
- PROV4712: "4712"
- PROV4713: "4713"
+ PROV4712: "Atekgicalki"
+ PROV4713: "Cigaxaatek"
  PROV4714: "4714"
  PROV4715: "4715"
  PROV4716: "4716"
