Makori prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2069,12 +2069,12 @@
  PROV2068: "Mutna"
  PROV2069: "Niarw"
  PROV2070: "Kingharsa"
- PROV2071: "2071"
+ PROV2071: "Kerdex Coast"
  PROV2072: "Dhargaj"
  PROV2073: "Nadmitt"
  PROV2074: "Girthaj"
  PROV2075: "Takhunit"
- PROV2076: "2076"
+ PROV2076: "Cayxono Gulf"
  PROV2077: "2077"
  PROV2078: "Northern Escravian Sea"
  PROV2079: "Gatkarha"
@@ -4663,38 +4663,38 @@
  PROV4662: "4662"
  PROV4663: "4663"
  PROV4664: "4664"
- PROV4665: "4665"
- PROV4666: "4666"
- PROV4667: "4667"
- PROV4668: "4668"
- PROV4669: "4669"
- PROV4670: "4670"
- PROV4671: "4671"
- PROV4672: "4672"
- PROV4673: "4673"
- PROV4674: "4674"
- PROV4675: "4675"
+ PROV4665: "Xonokaro"
+ PROV4666: "Onokwari"
+ PROV4667: "Xokwari"
+ PROV4668: "Yanyatn"
+ PROV4669: "Egayokaro"
+ PROV4670: "Kyomot"
+ PROV4671: "Setwelc"
+ PROV4672: "Ksewawr"
+ PROV4673: "Katktencoken"
+ PROV4674: "Ocgewt"
+ PROV4675: "Kockoy Lake"
  PROV4676: "4676"
  PROV4677: "4677"
  PROV4678: "4678"
- PROV4679: "4679"
- PROV4680: "4680"
+ PROV4679: "Leter"
+ PROV4680: "Lema"
  PROV4681: "4681"
  PROV4682: "4682"
- PROV4683: "4683"
- PROV4684: "4684"
+ PROV4683: "Xokgewt"
+ PROV4684: "Gewtwari"
  PROV4685: "Gaxnaxiyim"
  PROV4686: "4686"
  PROV4687: "4687"
  PROV4688: "4688"
  PROV4689: "4689"
  PROV4690: "4690"
- PROV4691: "4691"
- PROV4692: "4692"
- PROV4693: "4693"
- PROV4694: "4694"
- PROV4695: "4695"
- PROV4696: "4696"
+ PROV4691: "Aoneymat"
+ PROV4692: "Yaykmat"
+ PROV4693: "Karotnkalm"
+ PROV4694: "Petkon"
+ PROV4695: "Wawgewt"
+ PROV4696: "Temcoken"
  PROV4697: "Xiyimatek"
  PROV4698: "Amaxaanimcki"
  PROV4699: "Atekxkami"
