heisean loc and fixes

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -2592,7 +2592,7 @@
  PROV_ADJ2591: "2591"
  PROV_ADJ2592: "2592"
  PROV_ADJ2593: "2593"
- PROV_ADJ2594: "Heisean Sea"
+ PROV_ADJ2594: "Heisen Sea"
  PROV_ADJ2595: "2595"
  PROV_ADJ2596: "2596"
  PROV_ADJ2597: "Gongjag Strait"
