--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2592,7 +2592,7 @@
  PROV2591: "Wigizag"
  PROV2592: "Oshkamaama"
  PROV2593: "Waasagabe"
- PROV2594: "Heisean Sea"
+ PROV2594: "Heisen Sea"
  PROV2595: "2595"
  PROV2596: "2596"
  PROV2597: "Gongjag Strait"
