--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -237,3 +237,30 @@
  ayanihat_saenayan_waterways_desc: "Dry conditions in the Saenayan desert originally made it almost practically uninhabited. Only after trade routes through Saenaya became important source of income for many merchants, interest in settling the desert peaked and many projects were constructed. Most famous of these are the Mershan canals which were constructed to allow to tranfer goods down and up the river Mersh."
  ayanihat_legacy_of_empires: "Legacy of Empires"
  ayanihat_legacy_of_empires_desc: "Many empires rose and fell in the Visparaya, believing in different gods, morals, kings and dynasties, always shaping the way the region looked. What was common between them were the lands of Baraqaz and Saenaya, which hold many ancient sites of the kingdoms once ruling these lands. Insight into the stories and legends of these past eras fill our people with ambition and a wish to establish an empire of their own."
+
+ AEVADATA: "Aevadata"
+ KAREVADATA: "Karevadata"
+ DATAMAKH: "Datamakh"
+ KARDAGAXAW: "Kardagaxaw"
+ DATAMAKHA: "Datamakha"
+ KARDAGAXAWA: "Kardagaxawa"
+
+ aevadata_reform: "Aevadata"
+ aevadata_reform_desc: "Rulers who were politically close to the old Visparayan empire often inherited their methods of ruling with an iron fist."
+
+ varazan_aevadata_reform: "Varazan Eskidin"
+ varazan_aevadata_reform_desc: "Before unification the Varazan lands were mostly disunited and focused around few city-states, however thanks to the Eopedian influences Azhishan managed to unite all the states, adopting some of the governmental institutions of the old Visparayan Empire."
+
+ imperial_aevadata_reform: "Veshmeshah Government"
+ imperial_aevadata_reform_desc: "Since antiquity power in Visparaya was centered around the capital area and the great Kardagaxaw, who often mercilessly crushed any and all opposition. Some of those traditions survived to the current day, when only few are willing to go against the ruler."
+
+ visparayan_eskidin_reform: "Visparayan Eskidin"
+ visparayan_eskidin_reform_desc: "The modern eskidin system was established during the Yatunian period, however its roots can be traced to the way Visparayan Kards divided the lands between their most loyal noblemen. States which appeared after the fall of the empire retained most of the same governmental functions and ambitions to once again reunite all of the old Visparayan lands."
+
+ eskidin_system_reform: "Eskidin System"
+ eskidin_system_reform_desc: "The modern eskidin system was established during the Yatunian period, however its roots can be traced to the way Visparayan Kards divided the lands between their most loyal noblemen."
+
+ visparayan_herders_reform: "Visparayan Herders"
+ visparayan_herders_reform_desc: "Shepherds of the Baraqhazi mountains have to seasonally travel between mutliple places, often traversing long distances."
+
+ mechanic_can_form_visparaya_yes: "Enable forming Visparaya regardless of your primary culture."
