--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -267,7 +267,7 @@
  metzar_area: "Metzar"
  frasatah_area: "Frasatah"
  raxasamah_area: "Raxasamah"
- astarami_pass_area: "Astarami Pass"
+ kafsakus_area: "Kafsakus"
  upadah_area: "Upadah"
  auruvata_area: "Auruvata"
  banquz_area: "Banquz"
