Kerdexian prov names
💀

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+l_english:
  PROV1: "Geniburgh"
  PROV2: "Linamaco"
  PROV3: "Northern Blawennian Sea"
@@ -2605,7 +2606,7 @@
  PROV2604: "2604"
  PROV2605: "2605"
  PROV2606: "2606"
- PROV2607: "2607"
+ PROV2607: "Tamajniyakw"
  PROV2608: "2608"
  PROV2609: "2609"
  PROV2610: "2610"
@@ -4660,9 +4661,9 @@
  PROV4659: "Felisforst"
  PROV4660: "Salzwih"
  PROV4661: "4661"
- PROV4662: "4662"
- PROV4663: "4663"
- PROV4664: "4664"
+ PROV4662: "Tewukhumin"
+ PROV4663: "Awalakhumin"
+ PROV4664: "Thamchenaj"
  PROV4665: "Xonokaro"
  PROV4666: "Onokwari"
  PROV4667: "Xokwari"
@@ -4674,21 +4675,21 @@
  PROV4673: "Katktencoken"
  PROV4674: "Ocgewt"
  PROV4675: "Kockoy Lake"
- PROV4676: "4676"
- PROV4677: "4677"
- PROV4678: "4678"
+ PROV4676: "Wujitayaj"
+ PROV4677: "Wujchenaj"
+ PROV4678: "Holotajhup"
  PROV4679: "Leter"
  PROV4680: "Lema"
- PROV4681: "4681"
- PROV4682: "4682"
+ PROV4681: "Wujtalni"
+ PROV4682: "Takwtewuk"
  PROV4683: "Xokgewt"
  PROV4684: "Gewtwari"
  PROV4685: "Gaxnaxiyim"
- PROV4686: "4686"
+ PROV4686: "Tektheleihi"
  PROV4687: "4687"
- PROV4688: "4688"
- PROV4689: "4689"
- PROV4690: "4690"
+ PROV4688: "Nanajtaiwek"
+ PROV4689: "Sulajthak"
+ PROV4690: "Yuiletsaj"
  PROV4691: "Aoneymat"
  PROV4692: "Yaykmat"
  PROV4693: "Karotnkalm"
@@ -4698,8 +4699,8 @@
  PROV4697: "Xiyimatek"
  PROV4698: "Amaxaanimcki"
  PROV4699: "Atekxkami"
- PROV4700: "4700"
- PROV4701: "4701"
+ PROV4700: "Kerdexhup"
+ PROV4701: "Tsonataswo"
  PROV4702: "Yetaarkahar"
  PROV4703: "Awxiatek"
  PROV4704: "Ixnacamil"
@@ -4712,15 +4713,15 @@
  PROV4711: "4711"
  PROV4712: "Atekgicalki"
  PROV4713: "Cigaxaatek"
- PROV4714: "4714"
+ PROV4714: "Honattatsanis"
  PROV4715: "4715"
- PROV4716: "4716"
- PROV4717: "4717"
- PROV4718: "4718"
- PROV4719: "4719"
- PROV4720: "4720"
- PROV4721: "4721"
- PROV4722: "4722"
+ PROV4716: "Pitajholotaj"
+ PROV4717: "Okhaptwayaj"
+ PROV4718: "Holotajchenaj"
+ PROV4719: "Tsanichenaj"
+ PROV4720: "Asinajwoyis"
+ PROV4721: "Mayaiatho"
+ PROV4722: "Palaktsajche"
  PROV4723: "4723"
  PROV4724: "4724"
  PROV4725: "4725"
