A bit of sea tile names
6 sea tiles on Venatia's western coast

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2206,8 +2206,8 @@ l_english:
  PROV2204: "Ikino"
  PROV2205: "Senjile"
  PROV2206: "Serila"
- PROV2207: "2207"
- PROV2208: "2208"
+ PROV2207: "Hoyran Coast"
+ PROV2208: "Azur Coast"
  PROV2209: "Naneg"
  PROV2210: "Bavgania" #bear forest
  PROV2211: "Dakhalbum"
@@ -2439,10 +2439,10 @@ l_english:
  PROV2437: "Tuchoh"
  PROV2438: "Nzaasai"
  PROV2439: "Tsetahgotsee"
- PROV2440: "2440"
+ PROV2440: "Secesan Sea"
  PROV2441: "Ayahagobeesh"
  PROV2442: "Saichoh"
- PROV2443: "2443"
+ PROV2443: "Lafkeni Gulf"
  PROV2444: "Nlchihaltsise"
  PROV2445: "Nzhoogose"
  PROV2446: "Kaachoh"
@@ -2452,7 +2452,7 @@ l_english:
  PROV2450: "2450"
  PROV2451: "Abetosian Bay"
  PROV2452: "Likahkeyaa"
- PROV2453: "2453"
+ PROV2453: "Eastern Ballena Current"
  PROV2454: "Ditanitu"
  PROV2455: "Matsokowah"
  PROV2456: "Adiidmatso"
@@ -2467,7 +2467,7 @@ l_english:
  PROV2465: "Okeirina"
  PROV2466: "Yamcha"
  PROV2467: "2467"
- PROV2468: "2468"
+ PROV2468: "Western Ballena Current"
  PROV2469: "Quincha"
  PROV2470: "Merica"
  PROV2471: "Tahaki"
