--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3,7 +3,7 @@ l_english:
  PROV1: "Geniburgh"
  PROV2: "Linamaco"
  PROV3: "Northern Blawennian Sea"
- PROV4: "4"
+ PROV4: "Southern Inquieto Sea"
  PROV5: "Ehrenstadt"
  PROV6: "Kerborn"
  PROV7: "Njuhccamavran Bay"
@@ -1005,8 +1005,8 @@ l_english:
  PROV1003: "Mustir Mountains"
  PROV1004: "Igbašan"
  PROV1005: "Ilimun"
- PROV1006: "1006"
- PROV1007: "1007"
+ PROV1006: "Northern Inquieto Sea"
+ PROV1007: "Northern Anuanu Sea"
  PROV1008: "Azgur"
  PROV1009: "Jabal Qalil" #mountain low
  PROV1010: "1010"
@@ -2076,7 +2076,7 @@ l_english:
  PROV2074: "Girthaj"
  PROV2075: "Takhunit"
  PROV2076: "Cayxono Gulf"
- PROV2077: "2077"
+ PROV2077: "Western Inquieto Sea"
  PROV2078: "Northern Escravian Sea"
  PROV2079: "Gatkarha"
  PROV2080: "Kustira"
@@ -2379,7 +2379,7 @@ l_english:
  PROV2377: "Thiaran Coast"
  PROV2378: "2378"
  PROV2379: "Saguaca"
- PROV2380: "2380"
+ PROV2380: "Kaltesmeer"
  PROV2381: "Tayobaka"
  PROV2382: "2382"
  PROV2383: "Diacuba"
@@ -2390,25 +2390,25 @@ l_english:
  PROV2388: "2388"
  PROV2389: "2389"
  PROV2390: "2390"
- PROV2391: "2391"
+ PROV2391: "Eastern Gunther's Bay"
  PROV2392: "2392"
  PROV2393: "2393"
  PROV2394: "2394"
- PROV2395: "2395"
+ PROV2395: "Western Gunther's Bay"
  PROV2396: "2396"
- PROV2397: "2397"
+ PROV2397: "Southern Gunther's Bay"
  PROV2398: "2398"
  PROV2399: "2399"
  PROV2400: "2400"
  PROV2401: "2401"
  PROV2402: "2402"
  PROV2403: "Bizhan"
- PROV2404: "2404"
+ PROV2404: "Kinhqogi Coast"
  PROV2405: "Nizhala"
  PROV2406: "Minshialtzo"
  PROV2407: "Choshke"
  PROV2408: "Hinagoi"
- PROV2409: "2409"
+ PROV2409: "Grunkuste"
  PROV2410: "Hutza"
  PROV2411: "Bianagaii"
  PROV2412: "Adachte"
@@ -2425,14 +2425,14 @@ l_english:
  PROV2423: "Diyinini"
  PROV2424: "Tsiyaasai"
  PROV2425: "Tsiyagodezti"
- PROV2426: "2426"
+ PROV2426: "Ashmor Coast"
  PROV2427: "Saitsee"
  PROV2428: "Tseealchiseni"
  PROV2429: "Nyeegonaiso"
  PROV2430: "Saialchiseni"
  PROV2431: "Godiyaatu"
  PROV2432: "Tsetahgosai"
- PROV2433: "2433"
+ PROV2433: "Eastern Saelsmeer"
  PROV2434: "Ilnisai"
  PROV2435: "Godeztitu"
  PROV2436: "Western Panpallpan Sea"
@@ -2989,11 +2989,11 @@ l_english:
  PROV2987: "Allik"
  PROV2988: "Kullik"
  PROV2989: "Aularuk"
- PROV2990: "2990"
+ PROV2990: "Western Tiefblau Sea"
  PROV2991: "Taatset"
- PROV2992: "2992"
+ PROV2992: "Eastern Tiefblau Sea"
  PROV2993: "Yaakben"
- PROV2994: "2994"
+ PROV2994: "Northern Saelsmeer"
  PROV2995: "Panmapak"
  PROV2996: "Maalgutkig"
  PROV2997: "Igutchak"
@@ -3001,7 +3001,7 @@ l_english:
  PROV2999: "Aasrivak"
  PROV3000: "Sivullik"
  PROV3001: "Sivisurukpags"
- PROV3002: "3002"
+ PROV3002: "Western Saelsmeer"
  PROV3003: "Baelcaax"
  PROV3004: "Piiyuuts"
  PROV3005: "3005"
@@ -3022,9 +3022,9 @@ l_english:
  PROV3020: "Tluukoniic"
  PROV3021: "Konzagh"
  PROV3022: "3022"
- PROV3023: "3023"
- PROV3024: "3024"
- PROV3025: "3025"
+ PROV3023: "Southern Saelsmeer"
+ PROV3024: "Eastern Anuanu Sea"
+ PROV3025: "Ikaika Reef"
  PROV3026: "Kaatsok"
  PROV3027: "Dghoszogh"
  PROV3028: "Cuyaak"
@@ -3032,18 +3032,18 @@ l_english:
  PROV3030: "Yaayuu"
  PROV3031: "Denaetsii"
  PROV3032: "Southern Blawennian Sea"
- PROV3033: "3033"
+ PROV3033: "Western Anuanu Sea"
  PROV3034: "Taelghal"
  PROV3035: "Yiicdzes"
  PROV3036: "Tsiicyen"
  PROV3037: "Destluu"
  PROV3038: "Tsenanaay"
- PROV3039: "3039"
+ PROV3039: "Southern Anuanu Sea"
  PROV3040: "Dezaaneta"
  PROV3041: "Danaandzaen"
  PROV3042: "Eyuuytaa"
  PROV3043: "Pkedakay"
- PROV3044: "3044"
+ PROV3044: "Kanaka Approach"
  PROV3045: "Tsilcetggen"
  PROV3046: "Oudlkantsabaey"
  PROV3047: "Nenyuu"
@@ -3078,7 +3078,7 @@ l_english:
  PROV3076: "Hansal"
  PROV3077: "Eastern Farigan Sea"
  PROV3078: "Salak"
- PROV3079: "3079"
+ PROV3079: "Northern Alimano Reef"
  PROV3080: "Kurup"
  PROV3081: "Chamamk"
  PROV3082: "Chaparra"
@@ -3653,8 +3653,8 @@ l_english:
  PROV3651: "Nagestash"
  PROV3652: "Khrota"
  PROV3653: "Pravataka"
- PROV3654: "3654"
- PROV3655: "3655"
+ PROV3654: "Eastern Rugido Current"
+ PROV3655: "Western Rugido Current"
  PROV3656: "Bitalata"
  PROV3657: "Niatlaga"
  PROV3658: "Bijama"
@@ -3663,12 +3663,12 @@ l_english:
  PROV3661: "Ekamala"
  PROV3662: "Bhoda"
  PROV3663: "Goridhota"
- PROV3664: "3664"
+ PROV3664: "Eastern Inquieto Sea"
  PROV3665: "Durghlatama"
  PROV3666: "3666"
- PROV3667: "3667"
+ PROV3667: "Southern Sunken Rift"
  PROV3668: "3668"
- PROV3669: "3669"
+ PROV3669: "Central Sunken Rift"
  PROV3670: "Ksamalata"
  PROV3671: "Daboama"
  PROV3672: "Atatama"
@@ -3676,7 +3676,7 @@ l_english:
  PROV3674: "Buaman"
  PROV3675: "Pakmala"
  PROV3676: "Adhikespa"
- PROV3677: "3677"
+ PROV3677: "Northern Sunken Rift"
  PROV3678: "Magruali"
  PROV3679: "Sogitala"
  PROV3680: "Chkahasa"
@@ -3787,26 +3787,26 @@ l_english:
  PROV3785: "Gknikilagt"
  PROV3786: "Tajranghal"
  PROV3787: "Nirdaha"
- PROV3788: "3788"
+ PROV3788: "Cangrejo Rift"
  PROV3789: "Menguk"
  PROV3790: "Gsambya"
  PROV3791: "Bkamebg"
- PROV3792: "3792"
- PROV3793: "3793"
+ PROV3792: "Eastern Aitu Sea"
+ PROV3793: "Northern Aitu Sea"
  PROV3794: "Abugrehat"
  PROV3795: "Maktan"
- PROV3796: "3796"
+ PROV3796: "Central Aitu Sea"
  PROV3797: "Sakihama"
  PROV3798: "Maguroshima"
- PROV3799: "3799"
+ PROV3799: "Hylkeidenjärvi Coast"
  PROV3800: "Teibokusan"
  PROV3801: "Soshima"
  PROV3802: "Kitashi"
  PROV3803: "Kuroiwan"
  PROV3804: "Sakada"
- PROV3805: "305"
- PROV3806: "3806"
- PROV3807: "3807"
+ PROV3805: "3805"
+ PROV3806: "Southern Faiva Sea"
+ PROV3807: "Western Faiva Sea"
  PROV3808: "Oisyoto"
  PROV3809: "Akadoya"
  PROV3810: "Giheiya"
@@ -3817,12 +3817,12 @@ l_english:
  PROV3815: "3815"
  PROV3816: "Koshima"
  PROV3817: "Kakuishi"
- PROV3818: "3818"
+ PROV3818: "Southern Aitu Sea"
  PROV3819: "Shikayko"
  PROV3820: "Kyoshin"
  PROV3821: "Kiirokawa"
  PROV3822: "Yokojima"
- PROV3823: "3823"
+ PROV3823: "Northwestern Aitu Sea"
  PROV3824: "Shinyoko"
  PROV3825: "Komori"
  PROV3826: "Kurojima"
@@ -3853,11 +3853,11 @@ l_english:
  PROV3851: "3851"
  PROV3852: "Haxe"
  PROV3853: "3853"
- PROV3854: "3854"
+ PROV3854: "Eastern Itiiti Current"
  PROV3855: "3855"
  PROV3856: "3856"
- PROV3857: "3857"
- PROV3858: "3858"
+ PROV3857: "Western Itiiti Current"
+ PROV3858: "Western Aitu Sea"
  PROV3859: "3859"
  PROV3860: "3860"
  PROV3861: "3861"
@@ -3865,14 +3865,14 @@ l_english:
  PROV3863: "3863"
  PROV3864: "3864"
  PROV3865: "3865"
- PROV3866: "3866"
- PROV3867: "3867"
- PROV3868: "3868"
- PROV3869: "3869"
+ PROV3866: "Central Alimano Reef"
+ PROV3867: "Southern Alimano Reef"
+ PROV3868: "Eastern Faiva Sea"
+ PROV3869: "Central Faiva Sea"
  PROV3870: "3870"
  PROV3871: "3871"
  PROV3872: "3872"
- PROV3873: "3873"
+ PROV3873: "Northern Faiva Sea"
  PROV3874: "3874"
  PROV3875: "Kawgan"
  PROV3876: "3876"
