secesan prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2667,7 +2667,7 @@ l_english:
  PROV2665: "2665"
  PROV2666: "Coast of Yau"
  PROV2667: "2667"
- PROV2668: "2668"
+ PROV2668: "Capimckabur"
  PROV2669: "2669"
  PROV2670: "2670"
  PROV2671: "2671"
@@ -2678,12 +2678,12 @@ l_english:
  PROV2676: "2676"
  PROV2677: "2677"
  PROV2678: "Maxpuari"
- PROV2679: "2679"
+ PROV2679: "Yottohoyri"
  PROV2680: "Posalan Coast"
  PROV2681: "Central Tsinhoi Gulf"
  PROV2682: "Kwokuen Sea"
- PROV2683: "2683"
- PROV2684: "2684"
+ PROV2683: "Horcktehoyri"
+ PROV2684: "Moltepahni"
  PROV2685: "Shauseng Coast"
  PROV2686: "2686"
  PROV2687: "2687"
@@ -2740,8 +2740,8 @@ l_english:
  PROV2738: "2738"
  PROV2739: "2739"
  PROV2740: "2740"
- PROV2741: "2741"
- PROV2742: "2742"
+ PROV2741: "Puricaichi"
+ PROV2742: "Horcktecaichi"
  PROV2743: "2743"
  PROV2744: "2744"
  PROV2745: "2745"
@@ -4729,25 +4729,25 @@ l_english:
  PROV4727: "4727"
  PROV4728: "4728"
  PROV4729: "4729"
- PROV4730: "4730"
- PROV4731: "4731"
- PROV4732: "4732"
- PROV4733: "4733"
- PROV4734: "4734"
- PROV4735: "4735"
- PROV4736: "4736"
- PROV4737: "4737"
- PROV4738: "4738"
- PROV4739: "4739"
- PROV4740: "4740"
+ PROV4730: "Pockorhoyri"
+ PROV4731: "Serarhaalar"
+ PROV4732: "Vackackiptur"
+ PROV4733: "Humarhoyri"
+ PROV4734: "Sicanutchacko"
+ PROV4735: "Araxpacaxila"
+ PROV4736: "Oxkssepa"
+ PROV4737: "Kostanpuxu"
+ PROV4738: "Nuktawaxta"
+ PROV4739: "Kitixexs"
+ PROV4740: "Piskapuxu"
  PROV4741: "4741"
  PROV4742: "4742"
  PROV4743: "4743"
  PROV4744: "4744"
- PROV4745: "4745"
- PROV4746: "4746"
+ PROV4745: "Acchixthura"
+ PROV4746: "Uxpaca"
  PROV4747: "4747"
- PROV4748: "4748"
+ PROV4748: "Thuusskala"
  PROV4749: "4749"
  PROV4750: "4750"
  PROV4751: "4751"
