--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -1,34 +1,34 @@
 ﻿l_english:
  aspect_bonus_effect_tt: "This may have a §Ybonus effect§!."
- icon_aspect_salist_tt: "This teaching is shared by §YSalists§!. Having at least 2 salist teachings will blablabla"
- icon_aspect_chapterist_tt: "This teaching is shared by §YChapterists§!. Having at least 2 chapterist teachings will blablabla"
+ icon_aspect_salist_tt: "This teaching is shared by §YSalists§!. Having at least 2 salist teachings will give us salist event during celebration"
+ icon_aspect_chapterist_tt: "This teaching is shared by §YChapterists§!. Having at least 2 chapterist teachings will give us chapterist event during celebration"
  
  palmisianism_sun_solstice_festival_sal_aspect: "Sun Solstice Festival"
- desc_palmisianism_sun_solstice_festival_sal_aspect: "tldr"
+ desc_palmisianism_sun_solstice_festival_sal_aspect: "£mil£ §YAspect§!\n§YCelebrate Festival§! gives us §G+1§! year worth of manpower.\n\nDuring summer many cities and villages organise festivals dedicated to victories of Sal, it motivates our young populace to join military to also gain glory."
  palmisianism_rightful_war_chapter_aspect: "Rightful War"
- desc_palmisianism_rightful_war_chapter_aspect: "tldr"
+ desc_palmisianism_rightful_war_chapter_aspect: "£mil£ §YAspect§!\n§YCelebrate Festival§! gives us §G-2§! War Exhaustion.\n\nOur way of life is the only correct one, and our people and soldiers will support us in spreading it even in hardships."
  palmisianism_faithful_gratification_sal_aspect: "Faithful Gratification"
- desc_palmisianism_faithful_gratification_sal_aspect: "tldr"
+ desc_palmisianism_faithful_gratification_sal_aspect: "£mil£ §YAspect§!\nWinning battles will give us §G-0.25§! War Exhaustion.\n\nBravest soldiers are not only compensated materially but it is also believed that in afterlife their battle fervor will be also honored."
  palmisianism_battle_monks_chapter_aspect: "Battle Monks"
- desc_palmisianism_battle_monks_chapter_aspect: "tldr"
+ desc_palmisianism_battle_monks_chapter_aspect: "£mil£ §YAspect§!\nWinning battles will give us §G10%§! of defeated enemy units as manpower.\n\nOur chapter will field their most martially skillful folk to fight along our men, their task is to motivate our troops and later convince captured enemies to defect."
 
  palmisianism_one_of_many_sal_aspect: "One of Many"
- desc_palmisianism_one_of_many_sal_aspect: "tldr"
+ desc_palmisianism_one_of_many_sal_aspect: "£dip£ §YAspect§!\n§YCelebrate Festival§! gives us §G+25§! relations with every neighboring state.\n\nDiscrimination against other faiths and their followers is limited, why should we oppress them if they only worship wrong image of Sal."
  palmisianism_commoners_schools_chapter_aspect: "Commoners Schools"
- desc_palmisianism_commoners_schools_chapter_aspect: "tldr"
+ desc_palmisianism_commoners_schools_chapter_aspect: "£dip£ §YAspect§!\n§YCelebrate Festival§! gives us §G+10%§! institution gain in our capital if there is unembraced institution, otherwise we recieve §G+5%§! Peasant Loyalty.\n\nBy teaching peasants about our doctrines and world we can prevent them from being easily swayed by evil, also allow them to improve their lands with new knowledge."
  palmisianism_pragmatic_negotations_sal_aspect: "Pragmatic Negotations"
- desc_palmisianism_pragmatic_negotations_sal_aspect: "tldr"
+ desc_palmisianism_pragmatic_negotations_sal_aspect: "£dip£ §YAspect§!\nOur Vassals recieve bonuses to morale, force limit and manpower recovery gain.\n\nSal teached us that we can't always recieve what we want, if we are ready to compromise on some things we can also benefit on it."
  palmisianism_wandering_missionaries_chapter_aspect: "Wandering Missionaries"
- desc_palmisianism_wandering_missionaries_chapter_aspect: "tldr"
+ desc_palmisianism_wandering_missionaries_chapter_aspect: "£dip£ §YAspect§!\nProvinces in neighboring nations that aren't Palmisian will get events about converting them.\n\nWord of Sal cannot be contained in state borders, our chapters will send missionaries across globe to spread truth."
 
  palmisianism_cult_of_angels_sal_aspect: "Cult of Angels"
- desc_palmisianism_cult_of_angels_sal_aspect: "tldr"
+ desc_palmisianism_cult_of_angels_sal_aspect: "£adm£ §YAspect§!\n§YCelebrate Festival§! will convert number of provinces equal to our number of missionaries.\n\nAll these other gods worshipped by heathens are in reality angels sent by Sal, it allows us to convince them to convert while keeping their own traditions."
  palmisianism_may_celebrations_chapter_aspect: "May Celebrations"
- desc_palmisianism_may_celebrations_chapter_aspect: "tldr"
+ desc_palmisianism_may_celebrations_chapter_aspect: "£adm£ §YAspect§!\n§YCelebrate Festival§! gives us §G+1§! Stability.\n\nDuring May people celebrate stability, prosperity and wisdom bringed by Sal and his empire."
  palmisianism_sacred_hierarchy_sal_aspect: "Sacred Hierarchy"
- desc_palmisianism_sacred_hierarchy_sal_aspect: "tldr"
+ desc_palmisianism_sacred_hierarchy_sal_aspect: "£adm£ §YAspect§!\nOur new rulers will recieve a modifier giving legitimacy and estate loyalty for 10 years.\n\nSuccession and rule being not only a secular but also a spiritual and holy thing allows to solidify power after."
  palmisianism_landed_chapters_chapter_aspect: "Landed Chapters"
- desc_palmisianism_landed_chapters_chapter_aspect: "tldr"
+ desc_palmisianism_landed_chapters_chapter_aspect: "£adm£ §YAspect§!\nOur Provinces with Centers of Trade will recieve -15% development cost modifier.\n\nUsually chapters function like nomads, moving from city to city, village to village. But allowing them to have permament schools in important cities allow them to recover faster and cities to use their expertise to develop faster."
 
 
  PALMISIAN_ASPECTS_LONG: "Teaching"
@@ -42,3 +42,7 @@
  palmisian_one_of_many: "One of Many"
  convert_on_missionary_number_tooltip: "We will convert number of provinces based on our number of missionaries"
  palmisian_neighbor_tooltip: "We will gain 25 opinion with our every neighbor"
+
+ palmisianism_sacred_ruler: "Sacred Ruler"
+ palmisian_landed_chapters_modifier: "Landed Chapter"
+ palmisianism_pragmatic_vassal: "Pragmatic Vassal"
