--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4710,11 +4710,11 @@ l_english:
  PROV4708: "Kinnawarya"
  PROV4709: "Akxikxiatek"
  PROV4710: "Cixiykilila"
- PROV4711: "4711"
+ PROV4711: "Kimepinmamapu"
  PROV4712: "Atekgicalki"
  PROV4713: "Cigaxaatek"
  PROV4714: "Honattatsanis"
- PROV4715: "4715"
+ PROV4715: "Caoimapu"
  PROV4716: "Pitajholotaj"
  PROV4717: "Okhaptwayaj"
  PROV4718: "Holotajchenaj"
@@ -4740,31 +4740,31 @@ l_english:
  PROV4738: "Nuktawaxta"
  PROV4739: "Kitixexs"
  PROV4740: "Piskapuxu"
- PROV4741: "4741"
- PROV4742: "4742"
- PROV4743: "4743"
- PROV4744: "4744"
+ PROV4741: "Relil"
+ PROV4742: "Piwinmapu"
+ PROV4743: "Kofentepun"
+ PROV4744: "Mapulolo"
  PROV4745: "Acchixthura"
  PROV4746: "Uxpaca"
- PROV4747: "4747"
+ PROV4747: "Yunelewfi"
  PROV4748: "Thuusskala"
- PROV4749: "4749"
- PROV4750: "4750"
- PROV4751: "4751"
- PROV4752: "4752"
- PROV4753: "4753"
+ PROV4749: "Kacilalafken"
+ PROV4750: "Kadenaketrawe"
+ PROV4751: "Ketroketrawe"
+ PROV4752: "Kirifnawe"
+ PROV4753: "Wirulonkomapu"
  PROV4754: "Otkalarkakhar"
- PROV4755: "4755"
- PROV4756: "4756"
- PROV4757: "4757"
- PROV4758: "4758"
- PROV4759: "4759"
- PROV4760: "4760"
- PROV4761: "4761"
- PROV4762: "4762"
- PROV4763: "4763"
- PROV4764: "4764"
- PROV4765: "4765"
+ PROV4755: "Ufisakacu"
+ PROV4756: "Warialil"
+ PROV4757: "Tralkanconimi"
+ PROV4758: "Warialewfi"
+ PROV4759: "Wiliturinanko"
+ PROV4760: "Pikumkewa"
+ PROV4761: "Lamapu"
+ PROV4762: "Ciwaymapu"
+ PROV4763: "Mawioafita"
+ PROV4764: "Lafkenwapi"
+ PROV4765: "Troywinkul"
  PROV4766: "Xaaterlay"
  PROV4767: "Afcarsapar"
  PROV4768: "Kstasma"
