--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1012,3 +1012,14 @@
  lahagar_area: "Lahagar"
  socho_area: "Socho"
  akkalon_area: "Akkalon"
+
+ pitilamentia_area: "Pitilamentia"
+ marakka_valley_area: "Marakka Valley"
+ hoshacat_area: "Hoshacat"
+ immaissi_area: "Immaissi"
+ palami_area: "Palami"
+ west_ehadia_area: "West Ehadia"
+ east_ehadia_area: "East Ehadia"
+ east_agellardia_area: "East Agellardia"
+ tarakka_valley_area: "Tarakka Valley"
+ sao_joao_area: "Sao Joao"
