--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -135,3 +135,6 @@
 
  bhaithar_castle: "Bhaithar Castle"
  bhaithar_castle_desc: "While not particularly interesting, the city surrounding the castle is a bustling center of Dorchean isles influencing not only the region, but the whole north."
+
+ castelo_ferran: "Castelo Ferran"
+ castelo_ferran_desc: "In order to protect the trade routes coming from the inland of the Narbona and protect the city of Paraconna from heathens, a castle was build near the river, taking the name of one of the relatives of the local duke."
