--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1023,3 +1023,14 @@
  east_agellardia_area: "East Agellardia"
  tarakka_valley_area: "Tarakka Valley"
  sao_joao_area: "Sao Joao"
+ tawunu_area: "Tawunu"
+
+ dhama_dulka_area: "Dhaman Dulka"
+ cimasaga_area: "Cimasaga"
+ aremrava_area: "Aremrava"
+ farengara_area: "Farengara"
+ batogara_area: "Batogara"
+ west_aremrava_area: "West Aremrava"
+ engara_area: "Engara"
+ biyada_area: "Biyada"
+ ciidcas_area: "Ciidcas"
