--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -168,3 +168,8 @@
  ostemeria_nation_desc: "While the Ostemers are loosely organized into multiple guilds which often discuss important matters in the merchants' assembly, we still lack a unified national structure. If we finally politicaly unite, we will finally rule the Ostsee on our own."
  kwaang_nation_title: "Restore Kwaang Dynasty @KWN"
  kwaang_nation_desc: ""
+
+ diarena_nation_title: "Unite Diarena"
+ diarena_nation_desc: ""
+ diarenan_colonization: "Diarenan Colonization"
+ desc_diarenan_colonization: "Unification of Diarena allowed us to more effectively expand inland."
