--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -3695,9 +3695,9 @@
  CONNECT_TO_SHIP: "§YAttach to Transport§!"
  CONNECT_TO_SHIP_DESC: "A unit can be attached to a transport in port. When the transport leaves the port, the unit will embark on the transport and leave with it. If the unit size exceeds the transport capacity, the army will be split, and the remainder units will be left behind."
  CONNECT_TO_SHIP_LOCKED: "A unit that has moved more than halfway towards its destination cannot be attached to transports."
- natives_american_na: "North American natives"
- natives_american_sa: "South American natives"
- natives_american_ma: "Mesoamerican natives"
+ natives_american_na: "Chantlian natives"
+ natives_american_sa: "Venatian natives"
+ natives_american_ma: "Wasichantlian natives"
  rajput_musketeer: "Akbarid Musketeers"
  reformed_mughal_mansabdar: "Dai-Phat Cavalry"
  indian_shock_cavalry: "Deccani Light Cavalry"
