--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -276,7 +276,7 @@
  WAR_OVERVIEW_TICKING_WARSCORE: "Since this war was declared without a Casus Belli you there is no ticking War Score."
  WAR_OVERVIEW_TICKING_WARSCORE_WG: "Your current ticking War Score is: $SCORE$. \nYou can gain $MORE$ more war score by achieving the War Goal '$GOAL|Y$'."
  WAR_OVERVIEW_TICKING_WARSCORE_MAX: "You currently have max War Score: $MAXSCORE$."
- natives_american_inuit: "Native American Inuits"
+ natives_american_inuit: "Thiaran Natives"
  WG_ALLOW_TRADE_POWER: "Transfer $AMOUNT|Y%1$ Trade Power"
  TRANSFER_TRADE_POWER_TO_DESC: "$FROM$ will transfer $AMOUNT|Y%1$ of its Trade Power to $TO$, in trade nodes where they both have power. This will remain active for the duration of the truce."
  WOULD_CANCEL_TRANSFERING_TO_OTHER: "§Y\nThey would also cancel their current transfers to $WHO$.§!"
