--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -2185,9 +2185,9 @@
  south_america: "South America"
  oceania: "Oceania"
  nogovernment_ruler: "nogovernment_ruler"
- natives_american: "American Natives"
- natives_african: "African Natives"
- natives_asian: "Asian Natives"
+ natives_american: "New World Natives"
+ natives_african: "Sahilan Natives"
+ natives_asian: "Pemenian Natives"
  natives_pohjoismaa: "Northern Natives"
  natives_siberian: "Siberian Natives"
  MS_USERNAME: "Username:"
