--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2366,14 +2366,14 @@
  PROV2365: "Nitaypa"
  PROV2366: "Neraque"
  PROV2367: "Majopeta"
- PROV2368: "2368"
+ PROV2368: "Palanapopi"
  PROV2369: "Huaxtan Coast"
- PROV2370: "2370"
+ PROV2370: "Ilekoaiwi"
  PROV2371: "Milortirian Coast"
- PROV2372: "2372"
- PROV2373: "2373"
- PROV2374: "2374"
- PROV2375: "2375"
+ PROV2372: "Teyuwila"
+ PROV2373: "Takumiawane"
+ PROV2374: "Mosasay"
+ PROV2375: "Yanukea"
  PROV2376: "2376"
  PROV2377: "Thiaran Coast"
  PROV2378: "2378"
@@ -2385,22 +2385,22 @@
  PROV2384: "Hicabo"
  PROV2385: "2385"
  PROV2386: "2386"
- PROV2387: "2387"
- PROV2388: "2388"
+ PROV2387: "Amutiaka"
+ PROV2388: "Lalayteapi"
  PROV2389: "2389"
  PROV2390: "2390"
  PROV2391: "Eastern Gunther's Bay"
  PROV2392: "2392"
- PROV2393: "2393"
- PROV2394: "2394"
+ PROV2393: "Idibiwasi"
+ PROV2394: "Memeiatipi"
  PROV2395: "Western Gunther's Bay"
- PROV2396: "2396"
+ PROV2396: "Witaip"
  PROV2397: "Southern Gunther's Bay"
  PROV2398: "2398"
  PROV2399: "2399"
  PROV2400: "2400"
  PROV2401: "2401"
- PROV2402: "2402"
+ PROV2402: "Kaerepipi"
  PROV2403: "Bizhan"
  PROV2404: "Kinhqogi Coast"
  PROV2405: "Nizhala"
@@ -2594,48 +2594,48 @@
  PROV2593: "Waasagabe"
  PROV2594: "Heisen Sea"
  PROV2595: "2595"
- PROV2596: "2596"
+ PROV2596: "Kaoriripi"
  PROV2597: "Gongjag Strait"
  PROV2598: "Chamnam Bay"
  PROV2599: "Beidao Coast"
  PROV2600: "Desheng Bay"
- PROV2601: "2601"
+ PROV2601: "Eyaekwa"
  PROV2602: "2602"
  PROV2603: "2603"
- PROV2604: "2604"
- PROV2605: "2605"
- PROV2606: "2606"
+ PROV2604: "Eiteyee"
+ PROV2605: "Ibiebi"
+ PROV2606: "Eoreaibi"
  PROV2607: "Tamajniyakw"
- PROV2608: "2608"
- PROV2609: "2609"
- PROV2610: "2610"
+ PROV2608: "Etubaturukya"
+ PROV2609: "Kiririibi"
+ PROV2610: "Takatidibi"
  PROV2611: "2611"
- PROV2612: "2612"
- PROV2613: "2613"
- PROV2614: "2614"
- PROV2615: "2615"
- PROV2616: "2616"
+ PROV2612: "Moywela"
+ PROV2613: "Moyiwi"
+ PROV2614: "Mokoyatiaka"
+ PROV2615: "Taawasu"
+ PROV2616: "Petitiaka"
  PROV2617: "2617"
- PROV2618: "2618"
- PROV2619: "2619"
+ PROV2618: "Iimawa"
+ PROV2619: "Iitakulu"
  PROV2620: "Eolinbom Bay"
- PROV2621: "2621"
- PROV2622: "2622"
- PROV2623: "2623"
+ PROV2621: "Yaiwila"
+ PROV2622: "Bowopirekreii"
+ PROV2623: "Bowopirekreii"
  PROV2624: "Lamhoi Coast"
- PROV2625: "2625"
- PROV2626: "2626"
- PROV2627: "2627"
+ PROV2625: "Tapawira"
+ PROV2626: "Tataiwabuasa"
+ PROV2627: "Iwikuiiebe"
  PROV2628: "Laamen Sea"
- PROV2629: "2629"
- PROV2630: "2630"
- PROV2631: "2631"
- PROV2632: "2632"
- PROV2633: "2633"
- PROV2634: "2634"
- PROV2635: "2635"
- PROV2636: "2636"
- PROV2637: "2637"
+ PROV2629: "Itaiebe"
+ PROV2630: "Iwacutapitara"
+ PROV2631: "Capicapa"
+ PROV2632: "Itiiwu"
+ PROV2633: "Akaitaikua"
+ PROV2634: "Itu"
+ PROV2635: "Akakrapitiwa"
+ PROV2636: "Kawa"
+ PROV2637: "Bakikreicaya"
  PROV2638: "Daimin Strait"
  PROV2639: "Paau Sea"
  PROV2640: "Radoriasan Rainforest"
@@ -2643,16 +2643,16 @@
  PROV2642: "Zoeng Straits"
  PROV2643: "2643"
  PROV2644: "Pagtaan Sea"
- PROV2645: "2645"
- PROV2646: "2646"
- PROV2647: "2647"
- PROV2648: "2648"
- PROV2649: "2649"
+ PROV2645: "Wacuwira"
+ PROV2646: "Iraetarona"
+ PROV2647: "Ehuuebi"
+ PROV2648: "Wiraiwacu"
+ PROV2649: "Iikea"
  PROV2650: "Thundao Straits"
- PROV2651: "2651"
- PROV2652: "2652"
+ PROV2651: "Nanakwasu"
+ PROV2652: "Ekuiikwasu"
  PROV2653: "2653"
- PROV2654: "2654"
+ PROV2654: "Iira"
  PROV2655: "2655"
  PROV2656: "2656"
  PROV2657: "Huanghan Coast"
@@ -2663,7 +2663,7 @@
  PROV2662: "2662"
  PROV2663: "2663"
  PROV2664: "2664"
- PROV2665: "2665"
+ PROV2665: "Kadinipi"
  PROV2666: "Coast of Yau"
  PROV2667: "2667"
  PROV2668: "Capimckabur"
@@ -2744,7 +2744,7 @@
  PROV2743: "2743"
  PROV2744: "2744"
  PROV2745: "2745"
- PROV2746: "2746"
+ PROV2746: "Taciwitu"
  PROV2747: "2747"
  PROV2748: "2748"
  PROV2749: "Eyisaw"
@@ -4659,7 +4659,7 @@
  PROV4658: "Ruowasee"
  PROV4659: "Felisforst"
  PROV4660: "Salzwih"
- PROV4661: "4661"
+ PROV4661: "Wacuimotuju"
  PROV4662: "Tewukhumin"
  PROV4663: "Awalakhumin"
  PROV4664: "Thamchenaj"
@@ -4685,7 +4685,7 @@
  PROV4684: "Gewtwari"
  PROV4685: "Gaxnaxiyim"
  PROV4686: "Tektheleihi"
- PROV4687: "4687"
+ PROV4687: "Tatakrawi"
  PROV4688: "Nanajtaiwek"
  PROV4689: "Sulajthak"
  PROV4690: "Yuiletsaj"
