--- a/localisation/TD_01_flavour_bohemia_l_english.yml
+++ b/localisation/TD_01_flavour_bohemia_l_english.yml
@@ -21,3 +21,6 @@
  bohemia_geoberic_trade_desc: "With the discovery of the New World the global economic center shifted from Maqitan sea to Niheyan Ocean. Thanks to this, bohemia now lies in the centre of the trade instead of borderlands. Many nations wish to obtain chantlian and venatian riches - tobacco, cocoa, potatoes, tomatoes, slaves and cotton have become a common trading good. We can work as a middle man between the two words and profit from the silvestrine greed."
  bohemia_advanced_taxation: "Advanced Taxation"
  bohemia_advanced_taxation_desc: "Managing the massive amounts of production and trade helpes us develop a modern taxing system. Many tried to avoid paying taxes and it didn't turn out too good for them, so you better pay up!"
+
+ estate_nobles_armicustos_imperialis: "Armicustos Imperialis"
+ estate_nobles_armicustos_imperialis_desc: "Thanks to our long lasting loyalty to the empire, many of the emperors have put their trust in our nobles to secure the borders of the empire and oversee parts of the emperor's army in times of war."
