--- a/localisation/TD_01_flavour_bohemia_l_english.yml
+++ b/localisation/TD_01_flavour_bohemia_l_english.yml
@@ -23,4 +23,4 @@
  bohemia_advanced_taxation_desc: "Managing the massive amounts of production and trade helpes us develop a modern taxing system. Many tried to avoid paying taxes and it didn't turn out too good for them, so you better pay up!"
 
  estate_nobles_armicustos_imperialis: "Armicustos Imperialis"
- estate_nobles_armicustos_imperialis_desc: "Thanks to our long lasting loyalty to the empire, many of the emperors have put their trust in our nobles to secure the borders of the empire and oversee parts of the emperor's army in times of war."
+ estate_nobles_armicustos_imperialis_desc: "Thanks to our long lasting loyalty to the empire, many of the emperors have put their trust in our nobles to secure the borders of the empire and oversee parts of the emperor's army in times of war.\n§YThis privilege will have an additional modifier if we are allied to the current emperor.§!"
